# ringbrush-coverage

./: .gitignore  2026-04-13-Mon-progress-update.md  DEVELOPERS.md  README.md  REPORT_NOTES.md  pyproject.toml
docs/: dr_comparison.tex
outputs/: full-session-coverage_4540752.json
recordings/: 2026-03-28_0901_outer-front-only.txt  2026-03-28_0906_outer-left-only.txt  2026-03-28_0907_outer-right-only.txt  2026-03-28_0910_inner-upper-only.txt  2026-03-28_0912_inner-lower-only.txt  2026-03-28_0914_initialization.txt  2026-03-28_0946_full-session.txt  2026-03-28_0950_outer-front-only.txt  2026-03-28_0952_outer-left-only.txt  2026-03-28_0954_outer-right-only.txt  2026-03-28_0955_inner-upper-only.txt  2026-03-28_1006_inner-lower-only.txt  2026-03-30_0953_no-movement-idle.txt  2026-04-12_2127_up-and-down-and-up-and-down-and.txt  2026-04-20_0958_left-and-right-and-left-and-right-and.txt  2026-04-20_1000_inside-and-outside-and-inside-and-outside-and.txt  2026-05-29_2203_full-session-with-video-recording.txt  2026-05-29_2203_full-session-with-video-recording_format-3.csv
report_assets/: final_report_timeline.json
ringbrush_coverage/: __init__.py  __main__.py  cli.py  core.py  render.py  video_anchor.py
session-archive/: 2026-04-20_dead-reckoning-recalibration.md  2026-04-20_full-session-comparison-and-regeneration.md  2026-04-27_render-layout-1280x720.md  README.md
tests/: test_core.py
tools/: build_report.py  calibrate_dead_reckoning.py  calibrate_dr_from_video.py  compare_cursor_vs_video.py  compare_dead_reckoning.py  compare_dr_vs_video.py  compare_oversampling.py  (+3 more)
(+32 files in other folders)
