[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ringbrush-coverage"
version = "0.1.0"
description = "Convert smart ring toothbrushing logs into a mouth-coverage MP4 visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "Pillow>=10.0",
  "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
# Required only for the video-based ground-truth pipeline
# (tools/extract_video_motion.py and tools/sync_video_imu.py).
video = [
  "opencv-python>=4.10",
  "mediapipe>=0.10.20",
  "matplotlib>=3.8",
  "scipy>=1.11",
]

[project.scripts]
ringbrush-coverage = "ringbrush_coverage.cli:main"

[tool.setuptools]
packages = ["ringbrush_coverage"]

